Подключение скрипта перед закрывающим body

--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <script src="/js/main.js"></script>
-  <title>Кексобукинг</title>
+    <title>Кексобукинг</title>
 </head>
 <body>
 
   <main>
     <div class="promo">
       <h1 class="promo__title visually-hidden">Keksobooking. Кексы по соседству</h1>
-      <img src="img/keksobooking.svg" alt="Keksobooking. Кексы по соседству" width="215" height="45">
+      <img src="img=-=-keksobooking.svg" alt="Keksobooking. Кексы по соседству" width="215" height="45">
     </div>
 
     <!-- Карта объявлений -->
@@ -231,5 +230,6 @@
     </div>
   </template>
 
+  <script src="./js/main.js"></script>
 </body>
 </html>
